# facedance

./: .gitignore  main.py  pyproject.toml
app/static/: enrollment.html  login.html
app/static/admin/: page.html
app/static/admin/sections/: departments.html  live-feed.html  sessions.html  stats.html  users.html
app/static/css/: style.css
app/static/js/: app.js
app/static/lecturer/: page.html
app/static/lecturer/sections/: live-feed.html  my-sessions.html  new-session.html
app/static/student/: page.html
app/static/student/sections/: my-attendance.html  my-schedule.html
