[project]
name = "attendance"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "cloudinary>=1.44.2",
    "fastapi>=0.138.0",
    "insightface>=1.0.1",
    "lap>=0.5.13",
    "numpy>=2.5.0",
    "onnxruntime>=1.27.0",
    "opencv-python-headless>=4.13.0.92",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "passlib>=1.7.4",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
